[FIX] hr_referral: fix layout issues
Move the number of points
Make the kanban record bigger on desktop

closes odoo/enterprise#5740

--- a/hr_referral/static/src/scss/referral_kanban_view.scss
+++ b/hr_referral/static/src/scss/referral_kanban_view.scss
@@ -66,6 +66,9 @@
         .o_kanban_record {
             max-width: 450px;
             padding: 1.5rem 1.5rem 1rem;
+            @include media-breakpoint-up(sm) {
+                min-width: 450px;
+            }
         }
     }
     .o_kanban_referral_top_right{
